--- a/portfolio.html
+++ b/portfolio.html
@@ -3,9 +3,11 @@
         <title>
 
         </title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css" type="text/css">
     </head>
     <body>
         <div id="nav"></div>
+        <p id="greetings">Greetings OpenCode, <br> 
+        </p>
     </body>
 </html>
