chore: added page

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,15 +7,18 @@
     </head>
     <body>
         <div id="nav"></div>
-        <p id="greetings">Greetings OpenCode, <br> 
+        <div id="greetings">Greetings OpenCode, <br> 
             I recently found a great guy with a lot of potential.<br>
             Hear this everyday? Let me show you what makes this guy so special<br>
-
-
+            
             This guy knows a great deal of Python. (Python is easy, huh?)<br>
             He also knows C++ (Maybe he can help in Competitive programming)<br>
             And as you can see for yourself, he knows a decent level of HTML and CSS too<br>
             Hear it from the man himself<br>
-        </p>
+        </div>
+        <div id="about">
+            Hi, myself Amritanshu Barpanda.
+        </div>
+
     </body>
 </html>
