--- a/portfolio.html
+++ b/portfolio.html
@@ -6,8 +6,13 @@
         <link rel="stylesheet" href="style.css" type="text/css">
     </head>
     <body>
-        <div id="nav"></div>
-        <div id="greetings">Greetings OpenCode, <br> 
+        <div id="nav">
+            <a href="#about" class="nav">About</a>
+            <a href="#" class="nav"></a>
+            <a href="#" class="nav"></a>
+            <a href="#" class="nav"></a>
+        </div>
+        <p id="left">Greetings OpenCode, <br> 
             I recently found a great guy with a lot of potential.<br>
             Hear this everyday? Let me show you what makes this guy so special<br>
             
@@ -15,9 +20,16 @@
             He also knows C++ (Maybe he can help in Competitive programming)<br>
             And as you can see for yourself, he knows a decent level of HTML and CSS too<br>
             Hear it from the man himself<br>
-        </div>
+        </p>
+        &nbsp;
+        <p id="right">
+
+        </p>
         <div id="about">
-            Hi, myself Amritanshu Barpanda.
+            Hi, I am Amritanshu Barpanda. Just like mentioned above, I specialise in HTML and CSS for web development. As of coding languages, I have learned Python from a young age. I am quite comfortable with Python and can contribute in open-source Python projects.<br>
+            I have also been learning C++ language recently. <br>
+            I am also familiar with the version control systems like Git and Github. I believe these skills will help me contribute to bigger projects and work in a team. I wish to be an useful part of the OpenCode club.<br>
+            I am willing to dedicate hours to create amazing projects like this one. I am willing learn from the seniors and fellow club-mates. I am proven fast learner which makes me the ideal choice to include in a team.<br>
         </div>
 
     </body>
