chore: made dark mode

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,12 +8,15 @@
     </head>
     <body>
         <div id="nav">
-            <a href="#about" class="nav">About</a>
-            <a href="#" class="nav"></a>
-            <a href="#" class="nav"></a>
-            <a href="#" class="nav"></a>
+        <ul id="buttons">
+            <li><a href="#left" class="navb">Left</a></li>
+            <li><a href="#right" class="navb">Right</a></li>
+            <li><a href="#about" class="navb">About</a></li>
+            <li><a href="#footer" class="navb">Footer</a></li>
+        </ul>
+            <br> 
         </div>
-        <hr>
+        <!--<hr>-->
         <div id="intro">
         <div id="left">Greetings OpenCode, <br> 
             I recently found a great guy with a lot of potential.<br>
@@ -27,11 +30,12 @@
         &nbsp;
         </div>
         <div id="right">
-            <img src="C:\Users\abarp\OpenCode\Latest Photograph dt. 27.12.22.jpg" >
+            
         </div>
         </div>
         <br><br>
         <div id="about">
+            <img src="C:\Users\abarp\OpenCode\Latest Photograph dt. 27.12.22.jpg" width=100px height=125px><br>
             Hi, I am Amritanshu Barpanda. Just like mentioned above, I specialise in HTML and CSS for web development. As of coding languages, I have learned Python from a young age. I am quite comfortable with Python and can contribute in open-source Python projects.<br>
             I have also been learning C++ language recently. <br>
             I am also familiar with the version control systems like Git and Github. I believe these skills will help me contribute to bigger projects and work in a team. I wish to be an useful part of the OpenCode club.<br>
