--- a/portfolio.html
+++ b/portfolio.html
@@ -8,12 +8,12 @@
     </head>
     <body>
         <div id="nav">
-        <ul id="buttons">
-            <li><a href="#left" class="navb">Left</a></li>
-            <li><a href="#right" class="navb">Right</a></li>
-            <li><a href="#about" class="navb">About</a></li>
-            <li><a href="#footer" class="navb">Footer</a></li>
-        </ul>
+        <p align=center>
+            <a href="">Home</a> &emsp;&emsp;&emsp;&emsp;
+            <a href="">About</a> &emsp;&emsp;&emsp;&emsp;
+            <a href="">Portfolio</a> &emsp;&emsp;&emsp;&emsp;
+            <a href="">Contact</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        </p>
             <br> 
         </div>
         <!--<hr>-->
@@ -36,7 +36,7 @@
         <br><br>
         <div id="about">
             <img src="C:\Users\abarp\OpenCode\Latest Photograph dt. 27.12.22.jpg" width=100px height=125px><br>
-            Hi, I am Amritanshu Barpanda. Just like mentioned above, I specialise in HTML and CSS for web development. As of coding languages, I have learned Python from a young age. I am quite comfortable with Python and can contribute in open-source Python projects.<br>
+            Hi, I am Amritanshu Barpanda. Just as mentioned above, I specialise in HTML and CSS for web development. As of coding languages, I have learned Python from a young age. I am quite comfortable with Python and can contribute in open-source Python projects.<br>
             I have also been learning C++ language recently. <br>
             I am also familiar with the version control systems like Git and Github. I believe these skills will help me contribute to bigger projects and work in a team. I wish to be an useful part of the OpenCode club.<br>
             I am willing to dedicate hours to create amazing projects like this one. I am willing learn from the seniors and fellow club-mates. I am proven fast learner which makes me the ideal choice to include in a team.<br>
