--- a/portfolio.html
+++ b/portfolio.html
@@ -3,16 +3,16 @@
         <title>
             Portfolio Website
         </title>
-        <link rel="icon" href="https://play-lh.googleusercontent.com/g016Uf-WOxYJkRns8P5V79ax29p9QrfxWjTUkuIwJcFjddR9rXgjWI7t5v-BrhwyEKs" type="image/x-icon">
+        <link rel="icon" href="https://avatars.githubusercontent.com/u/34317510?s=200&v=4" type="image/x-icon">
         <link rel="stylesheet" href="style.css" type="text/css">
     </head>
     <body>
         <div id="nav">
         <p align=center>
-            <a href="">Home</a> &emsp;&emsp;&emsp;&emsp;
-            <a href="">About</a> &emsp;&emsp;&emsp;&emsp;
-            <a href="">Portfolio</a> &emsp;&emsp;&emsp;&emsp;
-            <a href="">Contact</a> &nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="#left">Home</a> &emsp;&emsp;&emsp;&emsp;
+            <a href="#">About</a> &emsp;&emsp;&emsp;&emsp;
+            <a href="#about">Portfolio</a> &emsp;&emsp;&emsp;&emsp;
+            <a href="#contact">Contact</a> 
         </p>
             <br> 
         </div>
@@ -36,11 +36,15 @@
         <br><br>
         <div id="about">
             <img src="C:\Users\abarp\OpenCode\Latest Photograph dt. 27.12.22.jpg" width=100px height=125px><br>
-            Hi, I am Amritanshu Barpanda. Just as mentioned above, I specialise in HTML and CSS for web development. As of coding languages, I have learned Python from a young age. I am quite comfortable with Python and can contribute in open-source Python projects.<br>
-            I have also been learning C++ language recently. <br>
-            I am also familiar with the version control systems like Git and Github. I believe these skills will help me contribute to bigger projects and work in a team. I wish to be an useful part of the OpenCode club.<br>
-            I am willing to dedicate hours to create amazing projects like this one. I am willing learn from the seniors and fellow club-mates. I am proven fast learner which makes me the ideal choice to include in a team.<br>
+            <ol>
+                <li>Hi, I am Amritanshu Barpanda. Just as mentioned above, I specialise in HTML and CSS for web development. As of coding languages, I have learned Python from a young age. I am quite comfortable with Python and can contribute in open-source Python projects.</li>
+                <li>I have also been learning C++ language recently. </li> 
+                <li>I am also familiar with the version control systems like Git and Github. I believe these skills will help me contribute to bigger projects and work in a team. I wish to be an useful part of the OpenCode club.</li>
+                <li>I am willing to dedicate hours to create amazing projects like this one. I am willing learn from the seniors and fellow club-mates. I am proven fast learner which makes me the ideal choice to include in a team.</li>
+            </ol>    
         </div>
+        <div id="contact">
 
+        </div>
     </body>
 </html>
