Chore: added contact

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,9 @@
             </ol>    
         </div>
         <div id="contact">
-
+            Contact me:- <br>
+            email address: 123ei0601@nitrkl.ac.in<br>
+            Phone number:- +91-1234567890
         </div>
     </body>
 </html>
