Conversion to Website

--- a/About.html
+++ b/About.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Portfolio Website
+            About Webpage
         </title>
         <link rel="icon" href="https://avatars.githubusercontent.com/u/34317510?s=200&v=4" type="image/x-icon">
         <link rel="stylesheet" href="style.css" type="text/css">
@@ -9,15 +9,14 @@
     <body>
         <div id="nav">
         <p align=center>
-            <a href="#left">Home</a> &emsp;&emsp;&emsp;&emsp;
-            <a href="#">About</a> &emsp;&emsp;&emsp;&emsp;
-            <a href="#about">Portfolio</a> &emsp;&emsp;&emsp;&emsp;
-            <a href="#contact">Contact</a> 
+            <a href="Home.html" class="link">Home</a> &emsp;&emsp;&emsp;&emsp;
+            <a href="About.html" class="link">About</a> &emsp;&emsp;&emsp;&emsp;
+            <a href="Portfolio.html" class="link">Portfolio</a> &emsp;&emsp;&emsp;&emsp;
+            <a href="Contact.html" class="link">Contact</a> 
         </p>
         </div><br>
         <!--<hr>-->
-        <!--<div id="intro">
-        <div id="left">Greetings OpenCode, <br> 
+        <!--<div id="left">Greetings OpenCode, <br> 
             I recently found a great guy with a lot of potential.<br>
             Hear this everyday? Let me show you what makes this guy so special<br>
             <ul>
@@ -27,12 +26,11 @@
             <li>Hear it from the man himself</li>
             </ul>
         &nbsp;
-        </div>
+        </div>-->
         <div id="right">
-            
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </div>
-        </div>
-        <br><br>-->
+        <!--<br><br>
         <div id="about">
             <img src="C:\Users\abarp\OpenCode\Latest Photograph dt. 27.12.22.jpg" width=100px height=125px><br>
             <ol>
@@ -42,7 +40,6 @@
                 <li>I am willing to dedicate hours to create amazing projects like this one. I am willing learn from the seniors and fellow club-mates. I am proven fast learner which makes me the ideal choice to include in a team.</li>
             </ol>    
         </div>
-        <!--
         <div id="contact">
             Contact me:- <br>
             email address: 123ei0601@nitrkl.ac.in<br>
