--- a/Contact.html
+++ b/Contact.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Portfolio Website
+            Contact Webpage
         </title>
         <link rel="icon" href="https://avatars.githubusercontent.com/u/34317510?s=200&v=4" type="image/x-icon">
         <link rel="stylesheet" href="style.css" type="text/css">
@@ -9,14 +9,14 @@
     <body>
         <div id="nav">
         <p align=center>
-            <a href="#left">Home</a> &emsp;&emsp;&emsp;&emsp;
-            <a href="#">About</a> &emsp;&emsp;&emsp;&emsp;
-            <a href="#about">Portfolio</a> &emsp;&emsp;&emsp;&emsp;
-            <a href="#contact">Contact</a> 
+            <a href="Home.html" class="link">Home</a> &emsp;&emsp;&emsp;&emsp;
+            <a href="About.html" class="link">About</a> &emsp;&emsp;&emsp;&emsp;
+            <a href="Portfolio.html" class="link">Portfolio</a> &emsp;&emsp;&emsp;&emsp;
+            <a href="Contact.html" class="link">Contact</a>  
         </p>
-        </div><br>
-        <!--<hr>-->
-        <!--<div id="intro">
+        </div>
+        <!--<hr>
+        <div id="intro">
         <div id="left">Greetings OpenCode, <br> 
             I recently found a great guy with a lot of potential.<br>
             Hear this everyday? Let me show you what makes this guy so special<br>
@@ -32,7 +32,7 @@
             
         </div>
         </div>
-        <br><br>-->
+        <br><br>
         <div id="about">
             <img src="C:\Users\abarp\OpenCode\Latest Photograph dt. 27.12.22.jpg" width=100px height=125px><br>
             <ol>
@@ -41,12 +41,16 @@
                 <li>I am also familiar with the version control systems like Git and Github. I believe these skills will help me contribute to bigger projects and work in a team. I wish to be an useful part of the OpenCode club.</li>
                 <li>I am willing to dedicate hours to create amazing projects like this one. I am willing learn from the seniors and fellow club-mates. I am proven fast learner which makes me the ideal choice to include in a team.</li>
             </ol>    
-        </div>
-        <!--
-        <div id="contact">
-            Contact me:- <br>
-            email address: 123ei0601@nitrkl.ac.in<br>
-            Phone number:- +91-1234567890
         </div>-->
+        <div id="contact">
+            I am happy to contacted at any time. Feel free to drop a message on my DM on the number below.<br>
+            My gmail-id is mentioned below but I prefer being contacted on WhatsApp.<br>
+
+            <p id="deets">
+            Contact me:- <br>
+            Email address:- 123EI0601@nitrkl.ac.in<br>
+            Phone number:- +91-7815077685</p>
+            I also have a Linkedin account. The 
+        </div>
     </body>
 </html>
