chore: improved contact page

--- a/About.html
+++ b/About.html
@@ -9,10 +9,10 @@
     <body>
         <div id="nav">
         <p align=center>
-            <a href="Home.html" class="link">Home</a> &emsp;&emsp;&emsp;&emsp;
-            <a href="About.html" class="link">About</a> &emsp;&emsp;&emsp;&emsp;
-            <a href="Portfolio.html" class="link">Portfolio</a> &emsp;&emsp;&emsp;&emsp;
-            <a href="Contact.html" class="link">Contact</a> 
+            <a href="Home.html" class="links">Home</a> &emsp;&emsp;&emsp;&emsp;
+            <a href="About.html" class="links">About</a> &emsp;&emsp;&emsp;&emsp;
+            <a href="Portfolio.html" class="links">Portfolio</a> &emsp;&emsp;&emsp;&emsp;
+            <a href="Contact.html" class="links">Contact</a>  
         </p>
         </div><br>
         <!--<hr>-->
