--- a/Contact.html
+++ b/Contact.html
@@ -9,12 +9,12 @@
     <body>
         <div id="nav">
         <p align=center>
-            <a href="Home.html" class="link">Home</a> &emsp;&emsp;&emsp;&emsp;
-            <a href="About.html" class="link">About</a> &emsp;&emsp;&emsp;&emsp;
-            <a href="Portfolio.html" class="link">Portfolio</a> &emsp;&emsp;&emsp;&emsp;
-            <a href="Contact.html" class="link">Contact</a>  
+            <a href="Home.html" class="links">Home</a> &emsp;&emsp;&emsp;&emsp;
+            <a href="About.html" class="links">About</a> &emsp;&emsp;&emsp;&emsp;
+            <a href="Portfolio.html" class="links">Portfolio</a> &emsp;&emsp;&emsp;&emsp;
+            <a href="Contact.html" class="links">Contact</a>   
         </p>
-        </div>
+        </div><br>
         <!--<hr>
         <div id="intro">
         <div id="left">Greetings OpenCode, <br> 
@@ -48,9 +48,10 @@
 
             <p id="deets">
             Contact me:- <br>
-            Email address:- 123EI0601@nitrkl.ac.in<br>
-            Phone number:- +91-7815077685</p>
-            I also have a Linkedin account. The 
+            Email address:- <a id="link" href="mailto:123ei0601@nitrkl.ac.in" target="_blank">123EI0601@nitrkl.ac.in</a><br>
+            Phone number:- +91-7815077685<br>
+            Github:- <a href="https://github.com/ABarpanda" id="link" target="_blank">https://github.com/ABarpanda</a></p>
+            I also have a Linkedin account. My linked in profile is <a href="https://www.linkedin.com/in/amritanshu-barpanda-37b88928b/" id="link" target="_blank">www.linkedin.com/in/amritanshu-barpanda-37b88928b</a>
         </div>
     </body>
 </html>
