--- a/portfolio.html
+++ b/portfolio.html
@@ -9,10 +9,10 @@
     <body>
         <div id="nav">
         <p align=center>
-            <a href="#left">Home</a> &emsp;&emsp;&emsp;&emsp;
-            <a href="#">About</a> &emsp;&emsp;&emsp;&emsp;
-            <a href="#about">Portfolio</a> &emsp;&emsp;&emsp;&emsp;
-            <a href="#contact">Contact</a> 
+            <a href="Home.html" class="links">Home</a> &emsp;&emsp;&emsp;&emsp;
+            <a href="About.html" class="links">About</a> &emsp;&emsp;&emsp;&emsp;
+            <a href="Portfolio.html" class="links">Portfolio</a> &emsp;&emsp;&emsp;&emsp;
+            <a href="Contact.html" class="links">Contact</a> 
         </p>
         </div><br>
         <!--<hr>-->
@@ -40,6 +40,8 @@
                 <li>I have also been learning C++ language recently. </li> 
                 <li>I am also familiar with the version control systems like Git and Github. I believe these skills will help me contribute to bigger projects and work in a team. I wish to be an useful part of the OpenCode club.</li>
                 <li>I am willing to dedicate hours to create amazing projects like this one. I am willing learn from the seniors and fellow club-mates. I am proven fast learner which makes me the ideal choice to include in a team.</li>
+                <li>I am expecting to learn how to make impressive projects for various competitions as well as for interviews.</li>
+                <li>In the future I would like to learn and work towards Cyber-security.</li>
             </ol>    
         </div>
         <!--
