Added Contact info

--- a/Contact.html
+++ b/Contact.html
@@ -51,7 +51,8 @@
             Email address:- <a id="link" href="mailto:123ei0601@nitrkl.ac.in" target="_blank">123EI0601@nitrkl.ac.in</a><br>
             Phone number:- +91-7815077685<br>
             Github:- <a href="https://github.com/ABarpanda" id="link" target="_blank">https://github.com/ABarpanda</a></p>
-            I also have a Linkedin account. My linked in profile is <a href="https://www.linkedin.com/in/amritanshu-barpanda-37b88928b/" id="link" target="_blank">www.linkedin.com/in/amritanshu-barpanda-37b88928b</a>
+            I also have a Linkedin account. My linked in profile is <a href="https://www.linkedin.com/in/amritanshu-barpanda-37b88928b/" id="link" target="_blank">www.linkedin.com/in/amritanshu-barpanda-37b88928b</a><br>
+            <a href="Home.html" id="link">Go back to Home Page</a>
         </div>
     </body>
 </html>
