--- a/About.html
+++ b/About.html
@@ -28,7 +28,10 @@
         &nbsp;
         </div>-->
         <div id="right">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            This website is my submission to the Web-Development task of OpenCode club of NIT Rourkela.<br>
+            I take pride in this website and I hope the club members also like it.<br>
+            I assure the club members that I didn't resort to any unethical means to prepare this website. This website is solely prepared by Amritanshu Barpanda of Electronics and Instrumentation branch of NIT Rourkela.<br>
+            <a href="Home.html" id="link">Go back to Home Page</a>
         </div>
         <!--<br><br>
         <div id="about">
