added left bottom button

--- a/About.html
+++ b/About.html
@@ -31,7 +31,9 @@
             This website is my submission to the Web-Development task of OpenCode club of NIT Rourkela.<br>
             I take pride in this website and I hope the club members also like it.<br>
             I assure the club members that I didn't resort to any unethical means to prepare this website. This website is solely prepared by Amritanshu Barpanda of Electronics and Instrumentation branch of NIT Rourkela.<br>
-            <a href="Home.html" id="link">Go back to Home Page</a>
+            <div id="home">
+                <a href="Home.html" id="link">Go back to Home Page</a>
+            </div>
         </div>
         <!--<br><br>
         <div id="about">
