--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,9 @@
                 <li>I am expecting to learn how to make impressive projects for various competitions as well as for interviews.</li>
                 <li>In the future I would like to learn and work towards Cyber-security.</li>
             </ol>    
-            <a href="Home.html" id="link">Go back to Home Page</a>
+            <div id="home">
+                <a href="Home.html" id="link">Go back to Home Page</a>
+            </div>
         </div>
         <!--
         <div id="contact">
