--- a/All_Text.html
+++ b/All_Text.html
@@ -58,11 +58,12 @@
 
             <p id="deets">
             Contact me:- <br>
-            Email address:- <a id="link" href="mailto:123ei0601@nitrkl.ac.in" target="_blank">119IE1060@nitrkl.ac.in</a><br>
+            Email address:- <a id="link" href="mailto:124IE1060@nitrkl.ac.in" target="_blank">124IE1060@nitrkl.ac.in</a><br>
             Phone number:- +91-1234567890<br>
             Github:- <a href="https://github.com/ABarpanda" id="link" target="_blank">https://github.com/ABarpanda</a></p>
             I also have a Linkedin account. My linked in profile is <a href="https://www.linkedin.com/in/amritanshu-barpanda-37b88928b/" id="link" target="_blank">www.linkedin.com/in/amritanshu-barpanda-37b88928b</a><br>
-            <a href="Home.html" id="link">Go back to Home Page</a>
-        </div>
+            <div id="home">
+                <a href="Home.html" id="link">Go back to Home Page</a>
+            </div>
     </body>
 </html>
