Added Dark mode

--- a/Reader.html
+++ b/Reader.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
     <head>
         <title>
             PDF Reader
@@ -13,3 +13,8 @@
         <embed src="" id="pdf" type="application/pdf">
     </body>
 </html>
+<!-- 
+    Find a way to replace the book name(inside the src) in line 10 by a variable
+    Then find an interesting way to display the name of the books
+    Finally find a way to incorporate csv files or database in HTML/css/JS.
+ -->
