--- a/Library.html
+++ b/Library.html
@@ -1,29 +1,48 @@
-<html>
+<html lang="en">
     <head>
         <title>
             AmBar Library
         </title>
         <link rel="stylesheet" href="style.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js">
+    </script>
     </head>
-    <body>
+    <body bgcolor="#222">
         <header>
-
+            <div class="mode">
+                Dark mode:             
+                <button id="change">OFF</button> 
+            </div>
         </header>
         <nav>
             <ul>
-                <li><a href="">Categories</a></li>
-                <li><a href="">Publishers</a></li>
+                <li><a href="" class="left_nav_links">Categories</a></li>
+                <li><a href="" class="left_nav_links">Publishers</a></li>
                 <li>
-                    <a href="">Price Ranges</a>
+                    <a href="" class="left_nav_links">Price Ranges</a>
                     <!-- <ol>
                         <li></li>
                     </ol> -->
                 </li>
-                <li><a href="">Titles</a></li>
+                <li><a href="" class="left_nav_links">Titles</a></li>
             </ul>
         </nav>
-        <div>
-            
+        <div id="right_div">
+            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </div>
+        <footer>
+
+        </footer>
+        <script>
+            $( "#change" ).on("click", function() {
+                if( $( "body" ).hasClass( "light" )) {
+                    $( "body" ).removeClass( "light" );
+                    $( "#change" ).text( "OFF" );
+                } else {
+                    $( "body" ).addClass( "light" );
+                    $( "#change" ).text( "ON" );
+                }
+            });
+        </script>
     </body>
 </html>
