added 2 more files

--- a/Reader.html
+++ b/Reader.html
@@ -9,6 +9,9 @@
         <div id="buttons">
             <button onclick="document.getElementById('pdf').src='Books/Git Notes For Professionals.pdf'">Git book</button>
             <button onclick="document.getElementById('pdf').src='Books/JavaScript Notes For Professionals.pdf'">JS book</button>
+            <button onclick="document.getElementById('pdf').src='Books/An Introduction to Statistical Learning with Applications in Python - (Springer Texts in Statistics) Gareth James, Daniela Witten, Trevor Hastie, Robert Tibshirani, Jonathan Taylor.pdf'">Py stats book</button>
+            <button onclick="document.getElementById('pdf').src='Books/Joel Grus - Data Science from Scratch_ First Principles with Python, Second Edition.pdf'">Data Science</button>
+            <button onclick="document.getElementById('pdf').src='Books/Aurelien Geron - Hands-On Machine Learning with Scikit-Learn, Keras, and TensorFlow.pdf'">Hands-On ML Book</button>
         </div>
         <embed src="" id="pdf" type="application/pdf">
     </body>
