--- a/Library.html
+++ b/Library.html
@@ -15,7 +15,7 @@
             </div>
         </header>
         <div id="center">
-            <nav>
+            <nav id="nav">
                 <ul>
                     <li><a href="" class="left_nav_links">Categories</a></li>
                     <li><a href="" class="left_nav_links">Publishers</a></li>
@@ -29,13 +29,21 @@
                 </ul>
             </nav>
             <div id="right_div">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                <p style="font-size: 18px; font-family: Arial, Helvetica, sans-serif; line-height: inherit;">
+                    Welcome to the Open-Library service.<br>
+                    Here you can deposit books for the greater benefit of the community and you can read books online to boost your career, enjoy your free time or get inspiration for your next novel.
+                    Everything is free of cost here.<br><br>
+                    You can head over to the book reader webpage by clicking <a href="Reader.html" target="_blank">here</a>.<br>
+                    Or you can choose to stay here and explore the our wide collection of books.<br>
+                    <iframe src="https://colab.research.google.com/drive/1h8qUIsNYQQBGsCgAAoSsPsqmIk2CPl6d?usp=sharing" style="height:max-content; width:300px;" title="Iframe"></iframe>
                 </p>
             </div>
         </div>
-        <footer>
-
+        <footer><br>
+            Contact us-
+            &emsp;<ul>
+                <li>Mail us at <a href="https://example.com">abc@gmail.com</a></li>
+                <li>Call us- +91 12345 67890</li></ul>
         </footer>
         <script>
             $( "#change" ).on("click", function() {
